@@ -1,10 +1,9 @@
 package org.jabref.gui.linkedfile;
 
-import java.io.File;
 import java.net.CookieHandler;
 import java.net.CookieManager;
 import java.net.CookiePolicy;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
@@ -15,20 +14,29 @@ import javafx.collections.FXCollections;
 
 import org.jabref.gui.DialogService;
 import org.jabref.gui.externalfiletype.ExternalFileTypes;
-import org.jabref.gui.util.CurrentThreadTaskExecutor;
+import org.jabref.gui.frame.ExternalApplicationsPreferences;
+import org.jabref.gui.preferences.GuiPreferences;
+import org.jabref.logic.FilePreferences;
+import org.jabref.logic.util.CurrentThreadTaskExecutor;
 import org.jabref.logic.xmp.XmpPreferences;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
-import org.jabref.preferences.FilePreferences;
-import org.jabref.preferences.PreferencesService;
 
+import com.github.tomakehurst.wiremock.WireMockServer;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
+import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
+import static com.github.tomakehurst.wiremock.client.WireMock.configureFor;
+import static com.github.tomakehurst.wiremock.client.WireMock.get;
+import static com.github.tomakehurst.wiremock.client.WireMock.head;
+import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
+import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
@@ -36,23 +44,26 @@ import static org.mockito.Mockito.when;
 
 class DownloadLinkedFileActionTest {
 
-    // Required for keepsHtmlEntry
     @TempDir
-    Path tempFolder;
+    private Path tempFolder;
 
     private BibEntry entry;
 
     private final BibDatabaseContext databaseContext = mock(BibDatabaseContext.class);
     private final DialogService dialogService = mock(DialogService.class);
+    private final ExternalApplicationsPreferences externalApplicationsPreferences = mock(ExternalApplicationsPreferences.class);
     private final FilePreferences filePreferences = mock(FilePreferences.class);
-    private final PreferencesService preferences = mock(PreferencesService.class);
+    private final GuiPreferences preferences = mock(GuiPreferences.class);
+
+    private WireMockServer wireMockServer;
 
     @BeforeEach
     void setUp(@TempDir Path tempFolder) throws Exception {
         entry = new BibEntry()
                 .withCitationKey("asdf");
 
-        when(filePreferences.getExternalFileTypes()).thenReturn(FXCollections.observableSet(new TreeSet<>(ExternalFileTypes.getDefaultExternalFileTypes())));
+        when(externalApplicationsPreferences.getExternalFileTypes()).thenReturn(FXCollections.observableSet(new TreeSet<>(ExternalFileTypes.getDefaultExternalFileTypes())));
+        when(preferences.getExternalApplicationsPreferences()).thenReturn(externalApplicationsPreferences);
         when(preferences.getFilePreferences()).thenReturn(filePreferences);
         when(preferences.getXmpPreferences()).thenReturn(mock(XmpPreferences.class));
         Path tempFile = tempFolder.resolve("temporaryFile");
@@ -67,16 +78,26 @@ class DownloadLinkedFileActionTest {
             cookieManager = (CookieManager) CookieHandler.getDefault();
         }
         cookieManager.setCookiePolicy(CookiePolicy.ACCEPT_ALL);
+
+        wireMockServer = new WireMockServer(2331);
+        wireMockServer.start();
+        configureFor("localhost", 2331);
+    }
+
+    @AfterEach
+    void tearDown() {
+        wireMockServer.stop();
     }
 
     @Test
     void replacesLinkedFiles(@TempDir Path tempFolder) throws Exception {
         String url = "http://arxiv.org/pdf/1207.0408v1";
 
-        LinkedFile linkedFile = new LinkedFile(new URL(url), "");
+        LinkedFile linkedFile = new LinkedFile(URI.create(url).toURL(), "");
         when(databaseContext.getFirstExistingFileDir(any())).thenReturn(Optional.of(tempFolder));
         when(filePreferences.getFileNamePattern()).thenReturn("[citationkey]");
         when(filePreferences.getFileDirectoryPattern()).thenReturn("");
+        when(filePreferences.shouldKeepDownloadUrl()).thenReturn(true);
 
         DownloadLinkedFileAction downloadLinkedFileAction = new DownloadLinkedFileAction(
                 databaseContext,
@@ -84,6 +105,7 @@ class DownloadLinkedFileActionTest {
                 linkedFile,
                 linkedFile.getLink(),
                 dialogService,
+                preferences.getExternalApplicationsPreferences(),
                 preferences.getFilePreferences(),
                 new CurrentThreadTaskExecutor());
         downloadLinkedFileAction.execute();
@@ -96,10 +118,11 @@ class DownloadLinkedFileActionTest {
     void doesntReplaceSourceURL(boolean keepHtml) throws Exception {
         String url = "http://arxiv.org/pdf/1207.0408v1";
 
-        LinkedFile linkedFile = new LinkedFile(new URL(url), "");
+        LinkedFile linkedFile = new LinkedFile(URI.create(url).toURL(), "");
         when(databaseContext.getFirstExistingFileDir(any())).thenReturn(Optional.of(tempFolder));
         when(filePreferences.getFileNamePattern()).thenReturn("[citationkey]");
         when(filePreferences.getFileDirectoryPattern()).thenReturn("");
+        when(filePreferences.shouldKeepDownloadUrl()).thenReturn(true);
 
         DownloadLinkedFileAction downloadLinkedFileAction = new DownloadLinkedFileAction(
                 databaseContext,
@@ -107,6 +130,7 @@ class DownloadLinkedFileActionTest {
                 linkedFile,
                 linkedFile.getLink(),
                 dialogService,
+                preferences.getExternalApplicationsPreferences(),
                 preferences.getFilePreferences(),
                 new CurrentThreadTaskExecutor());
         downloadLinkedFileAction.execute();
@@ -115,10 +139,10 @@ class DownloadLinkedFileActionTest {
 
         linkedFile = entry.getFiles().getFirst();
 
-        File downloadedFile = new File(linkedFile.getLink());
+        Path downloadedFile = Path.of(linkedFile.getLink());
 
         // Verify that re-downloading the file after the first download doesn't modify the entry
-        downloadedFile.delete();
+        Files.delete(downloadedFile);
 
         DownloadLinkedFileAction downloadLinkedFileAction2 = new DownloadLinkedFileAction(
                 databaseContext,
@@ -126,6 +150,7 @@ class DownloadLinkedFileActionTest {
                 linkedFile,
                 linkedFile.getSourceUrl(),
                 dialogService,
+                preferences.getExternalApplicationsPreferences(),
                 preferences.getFilePreferences(),
                 new CurrentThreadTaskExecutor(),
                 Path.of(linkedFile.getLink()).getFileName().toString(),
@@ -136,10 +161,19 @@ class DownloadLinkedFileActionTest {
     }
 
     @Test
-    void keepsHtmlEntry(@TempDir Path tempFolder) throws Exception {
-        String url = "https://blog.fefe.de/?ts=98e04151";
+    void keepsHtmlFileLink(@TempDir Path tempFolder) throws Exception {
+        stubFor(get(urlEqualTo("/html"))
+                .willReturn(aResponse()
+                        .withStatus(200)
+                        .withHeader("Content-Type", "text/html; charset=utf-8")
+                        .withBody("<html><body><h1>Hi</h1></body></html>")));
 
-        LinkedFile linkedFile = new LinkedFile(new URL(url), "");
+        stubFor(head(urlEqualTo("/html"))
+                .willReturn(aResponse()
+                        .withStatus(200)
+                        .withHeader("Content-Type", "text/html; charset=utf-8")));
+
+        LinkedFile linkedFile = new LinkedFile(URI.create("http://localhost:2331/html").toURL(), "");
         when(databaseContext.getFirstExistingFileDir(any())).thenReturn(Optional.of(tempFolder));
         when(filePreferences.getFileNamePattern()).thenReturn("[citationkey]");
         when(filePreferences.getFileDirectoryPattern()).thenReturn("");
@@ -154,6 +188,7 @@ class DownloadLinkedFileActionTest {
                 linkedFile,
                 linkedFile.getLink(),
                 dialogService,
+                preferences.getExternalApplicationsPreferences(),
                 preferences.getFilePreferences(),
                 new CurrentThreadTaskExecutor());
         downloadLinkedFileAction.execute();
@@ -162,10 +197,19 @@ class DownloadLinkedFileActionTest {
     }
 
     @Test
-    void removesHtmlEntry(@TempDir Path tempFolder) throws Exception {
-        String url = "https://blog.fefe.de/?ts=98e04151";
+    void removesHtmlFileLink(@TempDir Path tempFolder) throws Exception {
+        stubFor(get(urlEqualTo("/html"))
+                .willReturn(aResponse()
+                        .withStatus(200)
+                        .withHeader("Content-Type", "text/html; charset=utf-8")
+                        .withBody("<html><body><h1>Hi</h1></body></html>")));
 
-        LinkedFile linkedFile = new LinkedFile(new URL(url), "");
+        stubFor(head(urlEqualTo("/html"))
+                .willReturn(aResponse()
+                        .withStatus(200)
+                        .withHeader("Content-Type", "text/html; charset=utf-8")));
+
+        LinkedFile linkedFile = new LinkedFile(URI.create("http://localhost:2331/html").toURL(), "");
         when(databaseContext.getFirstExistingFileDir(any())).thenReturn(Optional.of(tempFolder));
         when(filePreferences.getFileNamePattern()).thenReturn("[citationkey]");
         when(filePreferences.getFileDirectoryPattern()).thenReturn("");
@@ -178,6 +222,7 @@ class DownloadLinkedFileActionTest {
                 linkedFile,
                 linkedFile.getLink(),
                 dialogService,
+                preferences.getExternalApplicationsPreferences(),
                 preferences.getFilePreferences(),
                 new CurrentThreadTaskExecutor(),
                 "",
